src/App.css
.mainText {
  pointer-events : none;
  position: absolute;
  top: 3vh;
  left: 7vw;
  font-family: Arial, Helvetica, sans-serif;
  line-height: 0.1;
}

.companyName {
  font-size: 70px;
  color: white;
}

.scrambler {
  display: flex;
  font-size: 20px;
  color: white;
  font-family: monospace;
}

.blinker {
  animation: blinker 1.5s linear infinite;
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

.contactText {
  position: absolute;
  pointer-events: none;
  bottom: 5vh;
  left: 5vw;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  color: white;
}

ul {
  list-style-type: none;
}

a {
  pointer-events: auto;
  color: inherit;
  text-decoration: none;
}

[id^="icon"]{
  position: relative;
  top: 5px;
  right: 5px;
}

.particleBackground {
  background-color: #0080b2;
  display: block;
}

.lowpolyape {
  pointer-events : none;
  position: absolute;
  top: 0;
  right: 0;
  height: 100vh;
  opacity: 0.5;
}

